--- a/public/index.html
+++ b/public/index.html
@@ -15,25 +15,25 @@
                 <button class="calc-button g-col-3 btn btn-light" data-value="divide">/</button>
             </div>
             <div class="grid mb-3">
-                <button class="calc-button g-col-3 btn btn-light" data-value="7">7</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="8">8</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="9">9</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="7">7</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="8">8</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="9">9</button>
                 <button class="calc-button g-col-3 btn btn-light" data-value="multipy">x</button>
             </div>
             <div class="grid mb-3">
-                <button class="calc-button g-col-3 btn btn-light" data-value="4">4</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="5">5</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="6">6</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="4">4</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="5">5</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="6">6</button>
                 <button class="calc-button g-col-3 btn btn-light" data-value="subtract">-</button>
             </div>
             <div class="grid mb-3">
-                <button class="calc-button g-col-3 btn btn-light" data-value="1">1</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="2">2</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="3">3</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="1">1</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="2">2</button>
+                <button class="numeric-button g-col-3 btn btn-light" data-value="3">3</button>
                 <button class="calc-button g-col-3 btn btn-light" data-value="add">+</button>
             </div>
             <div class="grid">
-                <button class="calc-button g-col-9 btn btn-light" data-value="0">0</button>
+                <button class="numeric-button g-col-9 btn btn-light" data-value="0">0</button>
                 <button class="calc-button g-col-3 btn btn-light">=</button>
             </div>
         </div>
