--- a/public/index.html
+++ b/public/index.html
@@ -8,33 +8,33 @@
 <body>
     <div class="calculator d-flex justify-content-center">
         <div class="wrapper bg-success bg-opacity-50 border border-success rounded">
-            <div class="screen bg-light bg-gradient mb-3">0</div>
+            <div class="screen bg-light bg-gradient mb-3"></div>
             <div class="grid mb-3">
-                <button class="calc-button g-col-6 btn btn-light" data-value="clear">AC</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="backspace">&larr;</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="divide">/</button>
+                <button class="g-col-6 btn btn-light" id="clear-button">AC</button>
+                <button class="g-col-3 btn btn-light" id="back-space-button">&larr;</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="/">/</button>
             </div>
             <div class="grid mb-3">
-                <button class="numeric-button g-col-3 btn btn-light" data-value="7">7</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="8">8</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="9">9</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="multipy">x</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="7">7</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="8">8</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="9">9</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="*">*</button>
             </div>
             <div class="grid mb-3">
-                <button class="numeric-button g-col-3 btn btn-light" data-value="4">4</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="5">5</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="6">6</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="subtract">-</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="4">4</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="5">5</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="6">6</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="-">-</button>
             </div>
             <div class="grid mb-3">
-                <button class="numeric-button g-col-3 btn btn-light" data-value="1">1</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="2">2</button>
-                <button class="numeric-button g-col-3 btn btn-light" data-value="3">3</button>
-                <button class="calc-button g-col-3 btn btn-light" data-value="add">+</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="1">1</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="2">2</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="3">3</button>
+                <button class="calc-button g-col-3 btn btn-light" data-value="+">+</button>
             </div>
             <div class="grid">
-                <button class="numeric-button g-col-9 btn btn-light" data-value="0">0</button>
-                <button class="calc-button g-col-3 btn btn-light">=</button>
+                <button class="calc-button g-col-9 btn btn-light" data-value="0">0</button>
+                <button class="g-col-3 btn btn-light" id="compute-button">=</button>
             </div>
         </div>
     </div>
